--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=35.198.12.207
+DB_PORT=3306
+DB_DATABASE=testeescola
+DB_USERNAME=root
+DB_PASSWORD=Will3443*
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
