--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=35.198.12.207
-DB_PORT=3306
-DB_DATABASE=testeescola
-DB_USERNAME=root
-DB_PASSWORD=Will3443*
+# DB_HOST=
+# DB_PORT=3306
+# DB_DATABASE=
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
